--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
+    "mongoose-lean-getters": "^2.2.1",
     "redis": "^4.7.0",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
