--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +27,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.9",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
